--- a/MeetingApp/Artifacts/ProfilePhotoTableViewCell.xib
+++ b/MeetingApp/Artifacts/ProfilePhotoTableViewCell.xib
@@ -7,22 +7,26 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="100" id="KGk-i7-Jjw" customClass="ProfilePhotoTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="140" id="KGk-i7-Jjw" customClass="ProfilePhotoTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="369" height="140"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="99"/>
+                <rect key="frame" x="0.0" y="0.0" width="369" height="139"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="inicio" translatesAutoresizingMaskIntoConstraints="NO" id="l2r-TX-5Og">
-                        <rect key="frame" x="103" y="8" width="115" height="83"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="fondo" translatesAutoresizingMaskIntoConstraints="NO" id="l2r-TX-5Og">
+                        <rect key="frame" x="134" y="20" width="100" height="100"/>
                     </imageView>
                 </subviews>
+                <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
             </tableViewCellContentView>
-            <point key="canvasLocation" x="406" y="432"/>
+            <connections>
+                <outlet property="profilePicture" destination="l2r-TX-5Og" id="Ziz-4O-4ys"/>
+            </connections>
+            <point key="canvasLocation" x="381.5" y="452"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="inicio" width="640" height="640"/>
+        <image name="fondo" width="150" height="200"/>
     </resources>
 </document>
