--- a/MeetingApp/Base.lproj/Main.storyboard
+++ b/MeetingApp/Base.lproj/Main.storyboard
@@ -434,6 +434,7 @@
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="emailOfGuest" destination="exJ-rk-q4v" id="Gcl-Qg-Bhe"/>
+                        <outlet property="locationGuestTableView" destination="Ftb-tR-C5g" id="B8H-kn-W5o"/>
                         <outlet property="nameOfGuest" destination="jMT-BK-qWb" id="De9-op-0vB"/>
                     </connections>
                 </viewController>
