--- a/MeetingApp/Base.lproj/Main.storyboard
+++ b/MeetingApp/Base.lproj/Main.storyboard
@@ -254,6 +254,10 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="mrb-Ti-ijy">
                                 <rect key="frame" x="0.0" y="425" width="375" height="128"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="lHU-Zt-mFZ" id="ph3-AY-5uA"/>
+                                    <outlet property="delegate" destination="lHU-Zt-mFZ" id="8ce-w5-RRI"/>
+                                </connections>
                             </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Location: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="clN-vP-SAr">
                                 <rect key="frame" x="20" y="396" width="84" height="21"/>
@@ -272,6 +276,7 @@
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="emailText" destination="lln-Fv-iWO" id="Qhd-k9-HAc"/>
+                        <outlet property="locationTableView" destination="mrb-Ti-ijy" id="qaa-1e-7lf"/>
                         <outlet property="nameText" destination="og4-jk-LnB" id="o2p-bS-wQ4"/>
                         <outlet property="photoProfileEdit" destination="Exh-wY-agr" id="SLa-bX-G48"/>
                     </connections>
